<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright (C) 2017 Jeff Gilfelt.
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~      http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logger_title"
            style="@style/Logger.TextAppearance.Label"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Logger.TextAppearance.Value"
            tools:text="https://example.com/path/to/resource?here=might_be_really_long"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logger_subtitle"
                style="@style/Logger.TextAppearance.Label"/>

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Logger.TextAppearance.Value"
                tools:text="GET"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logger_key"
                style="@style/Logger.TextAppearance.Label"/>

            <TextView
                android:id="@+id/key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Logger.TextAppearance.Value"
                tools:text="HTTP/1.1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logger_status"
                style="@style/Logger.TextAppearance.Label"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Logger.TextAppearance.Value"
                tools:text="Complete"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logger_description"
                style="@style/Logger.TextAppearance.Label"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Logger.TextAppearance.Value"
                tools:text="200 OK"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logger_request_time"
                style="@style/Logger.TextAppearance.Label"/>

            <TextView
                android:id="@+id/request_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Logger.TextAppearance.Value"
                tools:text="05/02/17 11:52:49"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logger_response_time"
                style="@style/Logger.TextAppearance.Label"/>

            <TextView
                android:id="@+id/response_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Logger.TextAppearance.Value"
                tools:text="05/02/17 11:52:49"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logger_duration"
                style="@style/Logger.TextAppearance.Label"/>

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Logger.TextAppearance.Value"
                tools:text="405 ms"/>

        </TableRow>

    </TableLayout>

</androidx.core.widget.NestedScrollView>
